--- a/deploy_prometheus.yml
+++ b/deploy_prometheus.yml
@@ -2,6 +2,8 @@
 
 - name: deploy_prometheus_server
   hosts: prometheus
+  vars:
+    mode: "all"
   become: true
   become_method: sudo
   become_flags: '-E -S -n'
