--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -38,7 +38,7 @@
     group: "{{ localuser }}"
     mode: 0755
 
-- name: alerting rules file
+- name: Create alerting rules file
   template:
     src: "{{playbook_dir}}/roles/prometheus/templates/alert.rules.j2"
     dest: "{{ prometheus_config_dir }}/rules/ansible_managed.rules"
@@ -48,7 +48,12 @@
   when:
     - prometheus_alert_rules != []
 
-- name: record rules
+# - name: Check alerting rules file
+#   shell: |
+#     go get github.com/prometheus/prometheus/cmd/promtool
+#     promtool check rules {{ prometheus_config_dir }}/rules/ansible_managed.rules
+
+- name: Create record rules file
   template:
     src: "{{playbook_dir}}/roles/prometheus/templates/record.rules.j2"
     dest: "{{ prometheus_config_dir }}/rules/record.rules"
@@ -57,6 +62,11 @@
     mode: 0755
   when:
     - prometheus_record_rules != []
+
+# - name: Check record rules file
+#   shell: |
+#     go get github.com/prometheus/prometheus/cmd/promtool
+#     promtool check rules {{ prometheus_config_dir }}/rules/record.rules
 
 - name: Pull prometheus image {{prometheus_docker_tags}}
   docker_image:
