--- a/roles/prometheus/tasks/node_exporter.yml
+++ b/roles/prometheus/tasks/node_exporter.yml
@@ -1,7 +1,9 @@
 ---
 - name: install libselinux-python
   yum:
-    name: 'libselinux-python'
+    name: 
+      - libselinux-python
+      - prometheus-node-exporter
     state: latest
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat'
 
@@ -16,18 +18,18 @@
   when: 
     - ansible_distribution == 'Ubuntu'
 
-- name: Copy the Node Exporter systemd service file
-  template:
-    src: "{{playbook_dir}}/roles/prometheus/templates/node_exporter.service.j2"
-    dest: /etc/systemd/system/node_exporter.service
-    owner: root
-    group: root
-    mode: 0644
+# - name: Copy the Node Exporter systemd service file
+#   template:
+#     src: "{{playbook_dir}}/roles/prometheus/templates/node_exporter.service.j2"
+#     dest: /etc/systemd/system/node_exporter.service
+#     owner: root
+#     group: root
+#     mode: 0644
 
-- name: Ensure Node Exporter is enabled on boot
-  become: true
-  systemd:
-    daemon_reload: true
-    name: node_exporter
-    enabled: true
-    state: restarted
+# - name: Ensure Node Exporter is enabled on boot
+#   become: true
+#   systemd:
+#     daemon_reload: true
+#     name: node_exporter
+#     enabled: true
+#     state: restarted
