--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -44,10 +44,11 @@ prometheus_scrape_configs:
           - "192.168.93.84:9100" #generic-runner machine
           - "192.168.93.31:9100" #runner-1.engageska-portugal.pt
 
-  # - job_name: "gitlab-runner"
-  #   static_configs:
-  #     - targets:
-  #         - "192.168.93.31:9252"
+  - job_name: "gitlab-runner"
+    static_configs:
+      - targets:
+          - "192.168.93.31:9252" # gitlab-docker-runner-1
+          - "192.168.93.84:9252" # generic-runner
 
 blackbox_ssh_targets:
   - "{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:22" #matteo devenv
