Added discovery zen ping unicast hosts line using inventory list variable

--- a/remove_elastic_containers.yml
+++ b/remove_elastic_containers.yml
@@ -1,6 +1,10 @@
 - name: Erase elastic
   hosts: elastic
   tasks:
+    - name: Display all variables
+      debug:
+        # var: hostvars[inventory_hostname]
+        msg: Hosts {{ ansible_play_hosts }}
     - name: Tear down existing services
       docker_container:
         name: elasticsearch
