--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -156,7 +156,7 @@ prometheus_alert_rules:
   labels:
     severity: critical
   annotations:
-    description: "{% raw %} Container {{ $labels.container }} of pod {{ $labels.kubernetes_pod_name }} in namespace {{ $labels.kubernetes_namespace }} keeps restarting."
+    description: "{% raw %} Container {{ $labels.container }} of pod {{ $labels.kubernetes_pod_name }} in namespace {{ $labels.kubernetes_namespace }} keeps restarting.{% endraw %}"
     summary: "{% raw %}Container {{ $labels.container }} - Too many restarts{% endraw %}"
 - alert: NumberRestartPerInitContainerContainer
   expr: 'kube_pod_init_container_status_restarts_total > 10'
@@ -164,5 +164,5 @@ prometheus_alert_rules:
   labels:
     severity: critical
   annotations:
-    description: "{% raw %} Container {{ $labels.container }} of pod {{ $labels.kubernetes_pod_name }} in namespace {{ $labels.kubernetes_namespace }} keeps restarting."
+    description: "{% raw %} Container {{ $labels.container }} of pod {{ $labels.kubernetes_pod_name }} in namespace {{ $labels.kubernetes_namespace }} keeps restarting.{% endraw %}"
     summary: "{% raw %}Container {{ $labels.container }} - Too many restarts{% endraw %}"
