--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -1,2 +1,168 @@
 ---
 # vars file for prometheus
+
+prometheus_binary_dir: /usr/local/bin
+prometheus_config_dir: /etc/prometheus
+prometheus_data_dir: /prometheus
+
+prometheus_alertmanager_config_dir: /etc/alertmanager
+prometheus_alertmanager_data_dir: /alertmanager
+
+grafana_provisioning_config_dir: /etc/grafana/provisioning/datasources
+grafana_data: /var/lib/grafana
+
+slack_api_url: "https://hooks.slack.com/services/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"
+
+k8s_api_server: ""
+k8s_certificate_authority: "/home/ubuntu/.minikube/ca.crt"
+k8s_client_certificate: "/home/ubuntu/.minikube/client.crt"
+k8s_client_key: "/home/ubuntu/.minikube/client.key"
+k8s_bearer_token: ""
+k8s_username: minikube
+
+prometheus_global:
+  scrape_interval: 15s
+  scrape_timeout: 10s
+  evaluation_interval: 15s
+
+prometheus_remote_write: []
+
+prometheus_remote_read: []
+
+prometheus_alertmanager_config:
+  - scheme: http
+    static_configs:
+      - targets: ["{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:9093"]
+
+prometheus_scrape_configs:
+  - job_name: "prometheus"
+    static_configs:
+      - targets:
+          - "{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:9090"
+
+  - job_name: "node"
+    static_configs:
+      - targets:
+          - "{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:9100"
+          - "192.168.93.84:9100" #generic-runner machine
+          - "192.168.93.31:9100" #runner-1.engageska-portugal.pt
+          - "192.168.93.12:9100" #nexus
+          - "192.168.93.200:9100" #server3-1
+          - "192.168.93.201:9100" #server3-2
+          - "192.168.93.202:9100" #server3-3
+          - "192.168.93.203:9100" #server2-1
+          - "192.168.93.204:9100" #server2-2
+          - "192.168.93.205:9100" #server2-3
+          - "192.168.93.206:9100" #server2-4
+          - "192.168.93.207:9100" #server2-5
+          - "192.168.93.208:9100" #controller1-1
+          - "192.168.93.209:9100" #controller1-2
+          - "192.168.93.210:9100" #storage2-1
+          - "192.168.93.211:9100" #storage1-1
+          - "192.168.93.212:9100" #storage1-2
+
+  - job_name: "gitlab-runner"
+    static_configs:
+      - targets:
+          - "192.168.93.31:9252" # gitlab-docker-runner-1
+          - "192.168.93.84:9252" # generic-runner
+
+  - job_name: "kube-state-metrics"
+    static_configs:
+      - targets:
+          - "{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:32298"
+
+blackbox_ssh_targets:
+  - "{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:22" #matteo devenv
+  - "192.168.93.37:22" #ssh skampi pipeline cluster node1
+  - "192.168.93.40:22" #ssh skampi pipeline cluster node2
+  - "192.168.93.74:22" #ssh skampi pipeline cluster node3
+  - "192.168.93.38:22" #ssh skampi pipeline cluster node4
+
+prometheus_record_rules:
+  - record: instance:node_cpu:load
+    expr: 100 - (avg by(instance) (irate(node_cpu{mode="idle"}[5m])) * 100)
+
+  - record: instance:node_ram:usage
+    expr: (1 - node_memory_MemAvailable / node_memory_MemTotal) * 100
+
+  - record: instance:node_fs:disk_space
+    expr: node_filesystem_avail{mountpoint="/",job="node"} / node_filesystem_size{mountpoint="/",job="node"} * 100
+
+prometheus_alert_rules:
+- alert: Watchdog
+  expr: vector(1)
+  for: 10m
+  labels:
+    severity: warning
+  annotations:
+    description: 'This is an alert meant to ensure that the entire alerting pipeline is functional.
+      This alert is always firing, therefore it should always be firing in Alertmanager
+      and always fire against a receiver. There are integrations with various notification
+      mechanisms that send a notification when this alert is not firing. For example the
+      "DeadMansSnitch" integration in PagerDuty.'
+    summary: 'Ensure entire alerting pipeline is functional'
+- alert: InstanceDown
+  expr: "up == 0"
+  for: 5m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %}{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 5 minutes.{% endraw %}"
+    summary: "{% raw %}Instance {{ $labels.instance }} down{% endraw %}"
+- alert: SshServiceDown
+  expr: "probe_success == 0"
+  for: 5m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %}{{ $labels.target }} of job {{ $labels.job }} has been down for more than 5 minutes.{% endraw %}"
+    summary: "{% raw %}Ssh Service {{ $labels.target }} down{% endraw %}"
+- alert: CriticalCPULoad
+  expr: 'instance:node_cpu:load > 80'
+  for: 2m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %}{{ $labels.instance }} of job {{ $labels.job }} has Critical CPU load for more than 2 minutes.{% endraw %}"
+    summary: "{% raw %}Instance {{ $labels.instance }} - Critical CPU load{% endraw %}"
+- alert: CriticalRAMUsage
+  expr: 'instance:node_ram:usage > 98'
+  for: 5m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %}{{ $labels.instance }} has Critical Memory Usage more than 5 minutes.{% endraw %}"
+    summary: "{% raw %}Instance {{ $labels.instance }} has Critical Memory Usage{% endraw %}"
+- alert: CriticalDiskSpace
+  expr: 'instance:node_fs:disk_space < 20'
+  for: 4m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %}{{ $labels.instance }} of job {{ $labels.job }} has less than 10% space remaining.{% endraw %}"
+    summary: "{% raw %}Instance {{ $labels.instance }} - Critical disk space usage{% endraw %}"
+- alert: ClockSkewDetected
+  expr: 'abs(node_timex_offset_seconds) * 1000 > 30'
+  for: 2m
+  labels:
+    severity: warning
+  annotations:
+    description: "{% raw %}Clock skew detected on {{ $labels.instance }}. Ensure NTP is configured correctly on this host.{% endraw %}"
+    summary: "{% raw %}Instance {{ $labels.instance }} - Clock skew detected{% endraw %}"
+- alert: NumberRestartPerContainer
+  expr: 'kube_pod_container_status_restarts_total > 30'
+  for: 1m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %} Container {{ $labels.container }} of pod {{ $labels.kubernetes_pod_name }} in namespace {{ $labels.kubernetes_namespace }} keeps restarting.{% endraw %}"
+    summary: "{% raw %}Container {{ $labels.container }} - Too many restarts{% endraw %}"
+- alert: NumberRestartPerInitContainerContainer
+  expr: 'kube_pod_init_container_status_restarts_total > 10'
+  for: 1m
+  labels:
+    severity: critical
+  annotations:
+    description: "{% raw %} Container {{ $labels.container }} of pod {{ $labels.kubernetes_pod_name }} in namespace {{ $labels.kubernetes_namespace }} keeps restarting.{% endraw %}"
+    summary: "{% raw %}Container {{ $labels.container }} - Too many restarts{% endraw %}"
