--- a/deploy_minikube.yml
+++ b/deploy_minikube.yml
@@ -7,6 +7,7 @@
   roles:
     - role: driver
       when: use_driver|bool
+  environment: "{{ minikube_environment_vars }}"
 
 # not all tasks should be run as root
 - name: Install Docker
@@ -14,6 +15,7 @@
     - development
   roles:
     - docker
+  environment: "{{ minikube_environment_vars }}"
 
 - name: Deploy minikube
   hosts:
@@ -22,6 +24,7 @@
   roles:
     - kubectl
     - minikube
+  environment: "{{ minikube_environment_vars }}"
 
 # not all tasks should be run as root
 - name: Install helm
@@ -29,6 +32,7 @@
     - development
   roles:
     - helm
+  environment: "{{ minikube_environment_vars }}"
 
 # not all tasks should be run as root
 - name: Launch Kubernetes
@@ -36,3 +40,4 @@
     - development
   roles:
     - k8s
+  environment: "{{ minikube_environment_vars }}"
