--- a/roles/prometheus/tasks/node_exporter.yml
+++ b/roles/prometheus/tasks/node_exporter.yml
@@ -7,7 +7,22 @@
     state: latest
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat'
 
-- name: Install node_exporter
+- name: Configure /etc/apt/sources.list
+  blockinfile:
+    path: /etc/apt/sources.list
+    block: |
+      deb http://it.archive.ubuntu.com/ubuntu/ focal main universe restricted multiverse
+      deb-src http://it.archive.ubuntu.com/ubuntu/ focal main universe restricted multiverse
+
+      deb http://security.ubuntu.com/ubuntu focal-security main universe restricted multiverse
+      deb-src http://security.ubuntu.com/ubuntu focal-security main universe restricted multiverse
+
+      deb http://it.archive.ubuntu.com/ubuntu/ focal-updates main universe restricted multiverse
+      deb-src http://it.archive.ubuntu.com/ubuntu/ focal-updates main universe restricted multiverse
+  when: 
+    - ansible_distribution == 'Ubuntu'
+
+- name: Install prometheus-node-exporter
   become: yes
   apt:
     name:
