--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -29,9 +29,9 @@
   become: yes
 
 - name: Copy generated file to configuration directory
-    copy:
-      src: "{{playbook_dir}}/roles/prometheus/generated"
-      dest: "{{ prometheus_config_dir }}"
+  copy:
+    src: "{{playbook_dir}}/roles/prometheus/generated/"
+    dest: "{{ prometheus_config_dir }}/"
 
 - name: Generate Prometheus configuration
   become: true
